samples/_failures_safe/1761624657_4ff106_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e822e498.c: In function ‘handle_event’:
./samples/SAFE/__tmp_e822e498.c:150:9: error: expected declaration or statement at end of input
  150 |         case STATE_READY:
      |         ^~~~
./samples/SAFE/__tmp_e822e498.c:150:9: error: expected declaration or statement at end of input
